css/style.css
/* ... */
.youtube-player .current-track-info {
	/*border-right: 1px solid white;*/
	font-family: Asap;
}
.ytplayer {
	z-index: 10;
}
.yt-player {
	z-index: 1000;
	position: absolute;
	left: 0;
	top:0;
	box-shadow: 1px 0px 15px 1px rgba(0, 0, 0, .9);
	background: rgba(0,0,0,.8);
	-webkit-transition-duration: 0.5s;
	-webkit-transform: translate3d(0,60px,0);
}
.show-youtube-player .yt-player {
	-webkit-transform: translate3d(0,-271px,0);
}
.youtube-toolbar {
	position: relative;
	z-index: 1032;
	margin: 0;
}
.youtube-toolbar .navbar-inner {
	border-radius: 0;
}
.navbar .youtube-toolbar .nav .divider-vertical {
	margin: 0;
}
.youtube-toolbar li > button {
	padding: 10px 20px;
	box-shadow: inset 0 0 0 #000;
	border: none;
	background: transparent;
	color:whitesmoke;
}
.navbar .youtube-toolbar .nav > li > button:hover,
.show-youtube-player .show-player,
.fullscreen .fullscreen {
	border-bottom: 4px solid #49afcd;
	padding: 8px 20px;
	box-shadow: inset 0 0 8px #000;
}
.youtube-toolbar .volume-down:hover,
.youtube-toolbar .volume-up:hover {
	opacity: .7;
}
.youtube-toolbar .volume-meter {
	position: absolute;
	top: 10px;
	right: 213px;
	font-size: 31px;
	opacity: .5;
	cursor: pointer;
	color: #42C7EE;
	text-shadow: 0 0 9px #49AFCD;
}
.hide-volume .volume-meter {
	display: none;
}
.show-player i {
	-webkit-transform: rotateZ(0deg);
	transform: rotateZ(0deg);
}
.show-youtube-player .show-player i {
	-webkit-transform: rotateZ(180deg);
	transform: rotateZ(180deg);
}

.youtube-toolbar .icon-refresh {
	margin: 13px;
	float: right;
	opacity: .5;
}
.yt-playing .youtube-toolbar .icon-refresh {
	-webkit-animation: rotation 12s infinite;
	opacity: 1;
}
.yt-playing .play {
	display: none;
}
.youtube-toolbar .pause {
	display: none;
}
.yt-playing .pause {
	display: inline-block;
}
@-webkit-keyframes rotation {
	100% { -webkit-transform: rotate(360deg); -moz-transform: rotate(360deg); -ms-transform: rotate(360deg);transform: rotate(360deg);}
}
/* user playlists module */
.user-playlists {
	overflow-y: scroll;
	min-height: 0;
}
.user-playlist {
	position: relative;
}
.user-playlist .badge {
	position: absolute;
	right: 0;
}
/* user profile */
.user-profile .dropdown .dropdown-toggle {
	border-radius: 0;
}
.user-profile .dropdown-menu {
	border-radius: 0;
	box-shadow: 0 0 5px black;
	background: rgba(0, 0, 0, .9);
	max-height: 250px;	
}
.user-profile .dropdown-menu > li a {
	color: white;
}
.navbar .nav>li>.dropdown-menu:after {
	border-bottom-color: rgba(0, 0, 0, .9);
}
.user-profile .dropdown .dropdown-toggle .username{
	color: white;
}
.user-profile .icon-user {
	color: white;
}
.user-profile .sign-out {
	display: none;
}
.user-profile.user-signed-in .sign-out {
	display: block;
}
.user-profile.user-signed-in .sign-in {
	display: none;
}
.user-profile.user-signed-in .icon-user {
	width: 20px;
	height: 20px;
	background-size: cover;
	background-position: 0 0;
}
.navbar-inverse .nav li.dropdown > .dropdown-toggle .caret {
	margin-top: 6px;
	border-top-color: #08c;
	border-bottom-color: #08c;
}
/* playlist info */
.playlist-info li a {
	color: white;
	border: none;
}
/* deafult skin */
.wood body {
	background: url(../img/wood.jpg);
	background-attachment: fixed;
	font-family: Asap;
}
.wood .navbar {
	/*font-family: Comfortaa;*/
}
.wood .navbar .brand {
	padding-left: 5px;
}
.wood .hero-unit, 
.wood .well {
	border: none;
}
.wood .sidebar.well	{
	background-color: #212121;
	box-shadow: 1px 10px 8px #333;
}
.wood .sidebar a,
.wood .youtube-item .media-title {
	color: gray;
	text-shadow: none;
}
.wood .youtube-item .media-title {
	display: block;
	position: relative;
	padding: 12px;
	background: rgba(243, 242, 242, 0.65);
	box-shadow: 0px 1px 2px rgba(0,0,0,.3);
	font-family: Open Sans Condensed;
	text-decoration: none;
	-webkit-transform: translate3d(0px, 0px, 0);
}
.wood .youtube-item .add-to-playlists ul {
	font-size: 12px;
	border: none;
	border-radius: 0;
	background: rgba(255, 255, 255, .95);
	max-height: 100px;
	overflow: auto;
}
.wood .sidebar .nav > li a:hover,
.nav-list > .active > a:hover,
.wood .nav-list > .active > a {
	background: transparent;
}
.wood .nav-list > .active > a {
	color: white;
}
.wood .youtube-toolbar a:hover,
.wood .youtube-toolbar .nav .dropdown-menu.playlist-info .active > a,
.wood .youtube-toolbar .nav .dropdown-menu a:hover,
.wood .youtube-toolbar .nav .dropdown-menu .active > a:hover,
.wood .feed-filters .active,
.wood .sidebar .active .nav-list li a,
.wood .user-profile .dropdown-menu a:hover {
	background-color: #49AFCD;
	background-image: -ms-linear-gradient(top,#5BC0DE,#2F96B4);
	background-image: -webkit-gradient(linear,0 0,0 100%,from(#5BC0DE),to(#2F96B4));
	background-image: -webkit-linear-gradient(top,#5BC0DE,#2F96B4);
	background-image: -o-linear-gradient(top,#5BC0DE,#2F96B4);
	background-image: -moz-linear-gradient(top,#5BC0DE,#2F96B4);
	background-image: linear-gradient(top,#5BC0DE,#2F96B4);
	background-repeat: repeat-x;
	/*background: -webkit-gradient(radial, -31 36, 0, 390 334, 450, from(rgba(0,0,0,0)), to(rgba(255,0,0,1)));*/
}
.wood .nav > li[class!="active"] > a:hover {
	opacity: .7;
}
.wood .nav-list li a {
	padding: 10px 40px 10px 15px;
}

/* Mobile Phones */
@media (max-width: 767px) {
	body {
		padding: 0 5px;
	}
	.navbar-fixed-top {
		margin-bottom: 5px;
	}
	.navbar-fixed-bottom {
		position: fixed;
	}
	.sidebar-left-fixed {
		display: none;
	}
	.container-main {
		margin-left: 0;
		margin-top: 0;
	}
	.youtube-player .btn {
		width: 40%;
	}
	.row-fluid input[type="search"].search-query {
		width: 100%;
		margin: 0;
	}
	.form-search button[type='submit'] {
		display: none;
	}
	.row-fluid .youtube-item[class*="span"] {
	  width: 100%;
	  float: none;
	}
	.form-search {
		margin-bottom: 0;
		z-index: 10;
	}
	.results-navigator {
		padding: 18px 5px 5px;
		margin-top: -17px;
	}
	.well.youtube-item:hover {
	    -webkit-box-shadow: none;
	    -moz-box-shadow: none;
	    box-shadow: none;
	}
}
/* ... */

